# AnaCal

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CHANGES.md  MANIFEST.in  README.md  conda_requirements.txt  conda_requirements_test.txt  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  python-app.yml  python-app2.yml  tests.yml
anacal/: __init__.py  __version__.py  dtype.py  measDMSim.py  plotter.py  process.py  simulation.py
anacal/data/: README.md
anacal/tests/: config_sim_lsst.ini  test_bin_simulate.py  test_fpfs.py
docs/: anacal.fpfs.rst  anacal.rst  anacal_dtype.rst  anacal_plotter.rst  anacal_process.rst  anacal_simulation.rst  conf.py  index.rst  modules.rst  overview.md
docs/examples/: 1_FPFS_example.ipynb
docs/source/: conf.py  index.rst
examples/: test_new_fpfs_catalog.ipynb
examples/fpfs/: 1_measure_shear.py  PSF_Fixed.fits
include/: Model.h  anacal.h  convolve.h  fft.h  imath.h  model.h  stdafx.h
include/anacal/: fft.h  (+15 more)
src/: convolve.cpp  detector.cpp  fft.cpp  fpfs.cpp  geometry.cpp  image.cpp  mask.cpp  math.cpp  model.cpp  ngmix.cpp  noise.cpp  psf.cpp  pybind.cpp  table.cpp  task.cpp
tests/: __init__.py  sim.py  test_benchmark.py  test_benchmark_py.py  test_catalog.py  test_convolve.py  test_detect.py  test_fpfs.py  test_fpfs_benchmark.py  test_fpfs_catalog.py  test_fpfs_detect.py  test_fpfs_mag.py  test_fpfs_measure.py  test_fpfs_noise_cov.py  test_fpfs_shearest.py  test_image.py  test_mask.py  test_model.py  test_noise.py  test_noise_correction.py  test_noise_cov.py  test_psf.py  test_shearest_2nd_order.py  test_table.py  test_table_empty.py
(+87 files in other folders)
